# open_manipulator_friends_ros2

./: README.md
open_manipulator_6dof_controller/: CMakeLists.txt  package.xml
open_manipulator_6dof_controller/include/open_manipulator_6dof_controller/: open_manipulator_6dof_controller.h
open_manipulator_6dof_controller/launch/: open_manipulator_6dof_controller.launch.py  open_manipulator_6dof_moveit.launch.py
open_manipulator_6dof_controller/src/: open_manipulator_6dof_controller.cpp
open_manipulator_6dof_description/: CMakeLists.txt  package.xml
open_manipulator_6dof_description/launch/: open_manipulator_6dof_rviz.launch.py
open_manipulator_6dof_description/rviz/: open_manipulator_6dof.rviz
open_manipulator_6dof_description/urdf/: open_manipulator_6dof.gazebo.xacro  open_manipulator_6dof.urdf.xacro
open_manipulator_6dof_libs/: CMakeLists.txt  package.xml
open_manipulator_6dof_moveit/: .setup_assistant  CMakeLists.txt  package.xml
open_manipulator_6dof_moveit/config/: fake_controllers.yaml  ompl_planning.yaml  open_manipulator_6dof.srdf  ros_controllers.yaml
open_manipulator_6dof_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  real.launch.py  servo.launch.py  setup_assistant.launch.py
open_manipulator_6dof_teleop/: CMakeLists.txt  package.xml
open_manipulator_6dof_teleop/include/open_manipulator_6dof_teleop/: open_manipulator_6dof_teleop_joystick.h  open_manipulator_6dof_teleop_keyboard.h
open_manipulator_6dof_teleop/launch/: open_manipulator_6dof_teleop_joystick.launch.py  open_manipulator_6dof_teleop_keyboard.launch.py
open_manipulator_6dof_teleop/src/: open_manipulator_6dof_teleop_joystick.cpp  open_manipulator_6dof_teleop_keyboard.cpp
open_manipulator_friends/: CMakeLists.txt  package.xml
