<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_friends</name>
  <version>1.0.0</version>
  <description>Metapackage for OpenManipulator friends packages.</description>
  <license>Apache-2.0</license>

  <author email="zang09@naver.com">Hae-Bum Jung</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_friends</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>open_manipulator_6dof_controller</exec_depend>
  <exec_depend>open_manipulator_6dof_description</exec_depend>
  <exec_depend>open_manipulator_6dof_libs</exec_depend>
  <exec_depend>open_manipulator_6dof_moveit</exec_depend>
  <exec_depend>open_manipulator_6dof_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
